--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "set API_BASE_URL=fdfdfds &&react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
